<resources>
    <string name="button_title_ok">"OK"</string>
    <string name="button_title_cancel">"Cancel"</string>
    <string name="button_title_back">"Back"</string>
    <string name="label_placeholder_fileName">"File Name - Required"</string>
    <string name="label_placeholder_password">"Password - Required"</string>
    <string name="contact_delete_title">"Delete Connection"</string>
    <string name="contact_delete_revoke">"Revoke"</string>
    <string name="contact_section_title1">"SHARED HEALTH PASSES"</string>
    <string name="contact_section_title2">"CONTACT INFORMATION"</string>
    <string name="contact_section_title3">"Registration"</string>
    <string name="contact_name">"Name"</string>
    <string name="contact_email">"Email"</string>
    <string name="contact_address">"Address"</string>
    <string name="contact_website">"Website"</string>
    <string name="contact_gender">"Gender"</string>
    <string name="contact_age">"Age Range"</string>
    <string name="contact_race">"Race"</string>
    <string name="contact_location">"Location"</string>
    <string name="contact_credentials_available">"Available cards, passes"</string>
    <string name="contact_credentials_unsupported">"Unsupported cards, passes"</string>
    <string name="contact_credentials_shared">"Shared cards, passes"</string>
    <string name="contact_credentials_reupload_title">"Are you sure"</string>
    <string name="contact_credentials_reupload_message">"One or more selected credentials have already been uploaded to this organization. Do you want to upload again?"</string>
    <string name="contact_credentials_reupload_yes">"Yes"</string>
    <string name="contact_credentials_selected">"Selected cards, passes"</string>
    <string name="contact_credentials_submitting">"Submitting data"</string>
    <string name="contact_credentials_verifying">"Verifying card, pass..."</string>
    <string name="contact_purpose">"Purpose"</string>
    <string name="contact_partiallySubmitted_title">"Data partially submitted"</string>
    <string name="contact_partiallySubmitted_subtitle">"At least one card or pass was not submitted."</string>
    <string name="contact_uploadComplete_title">"Upload complete"</string>
    <string name="contact_uploadComplete_subtitle">"Success: Selected cards, passes have been uploaded."</string>
    <string name="contact_uploadFailed_title">"Upload did not complete"</string>
    <string name="contact_uploadFailed_subtitle">"Card, pass submission did not complete.\nPlease try again."</string>
    <string name="contact_nodata">"No data"</string>
    <string name="contact_consentFailed_title">"Upload did not complete"</string>
    <string name="contact_consentFailed_message">"Card, pass submission did not complete.\nPlease try again."</string>
    <string name="contact_offboardingFailed_title">"Off-boarding Incomplete"</string>
    <string name="contact_offboardingFailed_message">"Couldn\'t complete the off-boarding process with the contact.\nDo you still want to remove this contact from Wallet?"</string>
    <string name="contact_offboardingFailed_button2">"Yes, Remove"</string>
    <string name="contact_alert_upload_title">"Successfully Added"</string>
    <string name="contact_alert_upload_message">"Would you like to share an existing card with this connection?"</string>
    <string name="contact_alert_upload_action_yes">"Yes"</string>
    <string name="contact_alert_upload_action_no">"No"</string>
    <string name="cred_delete_title">"Delete Cards"</string>
    <string name="obfuscation_personal_information">"Personal Information"</string>
    <string name="env_localhost">"localhost"</string>
    <string name="env_canada">"Canada"</string>
    <string name="env_us">"USA"</string>
    <string name="env_ap">"Asia Pacific"</string>
    <string name="env_au">"Australia"</string>
    <string name="env_emea">"EMEA"</string>
    <string name="env_ap_subtitle">"Asia, Oceania"</string>
    <string name="env_emea_subtitle">"Europe, Middle East, Africa"</string>
    <string name="env_title">"Select the region in which your health credential will be issued"</string>
    <string name="env_title_verifier">"Select the region in which your health credential will be verified"</string>
    <string name="gs_step0_title">"Welcome to Wallet"</string>
    <string name="gs_step0_message">"Keep your healthcare cards and passes here. Present their QR codes for validation at work, airports, venues."</string>
    <string name="gs_step1_title">"How it works"</string>
    <string name="gs_step1_message">"Your healthcare provider sends you a secure pass or card that verifies your vaccination or test result."</string>
    <string name="gs_step2_title">"Scan for verification"</string>
    <string name="gs_step2_message">"Each card and pass includes a QR code for scanning and verifying. Wallet keeps data private and secure."</string>
    <string name="gs_finishButtonTitle_getStarted">"Get started →"</string>
    <string name="gs_finishButtonTitle_next">"Next"</string>
    <string name="kpm_label">"Copied to clipboard"</string>
    <string name="kpm_footerTitle">"Tap to copy"</string>
    <string name="kpm_delete_confirm">"Yes, delete"</string>
    <string name="login_done">"Done"</string>
    <string name="pin_title_create">"Optional PIN"</string>
    <string name="pin_title_confirm">"Confirm your PIN"</string>
    <string name="pin_title_unlock">"Enter PIN"</string>
    <string name="pin_detail_create">"For added security, set a four-digit PIN. Use it with Face ID or touch."</string>
    <string name="pin_detail_hint">"Enter 4 Digits"</string>
    <string name="pin_detail_confirm">"Tap your four-digit PIN again to confirm."</string>
    <string name="pin_detail_unlock">"To unlock your Wallet, tap your four-digit PIN."</string>
    <string name="pin_reset_message">"This will reset all Wallet settings, delete your cards and connections, and delete your Wallet PIN, if set."</string>
    <string name="pin_reset_title">"Reset Wallet"</string>
    <string name="pin_confirmation_title">"PIN confirmation unsuccessful"</string>
    <string name="pin_confirmation_message">"The PIN you entered did not match. Please try again."</string>
    <string name="pin_confirmation_skip">"Skip Setup"</string>
    <string name="pin_confirmation_startOver">"Start again"</string>
    <string name="pin_retry">"Try again"</string>
    <string name="pin_invalid_title">"Invalid PIN"</string>
    <string name="pin_invalid_message">"The PIN you entered is invalid. Please try again."</string>
    <string name="pin_complete_title">"Success"</string>
    <string name="pin_complete_message">"You can now use this PIN to log in to the app.\n\nTo change your PIN and related settings, go to the app settings in Wallet."</string>
    <string name="pin_complete_continue">"Continue"</string>
    <string name="profile_revokeStatus_footer">"The Digital Health Pass Verify app will check for revoke status with the issuer for the scanned card or pass."</string>
    <string name="profile_daily">"Daily"</string>
    <string name="profile_weekly">"Weekly"</string>
    <string name="profile_monthly">"Monthly"</string>
    <string name="profile_never">"Never"</string>
    <string name="profile_resetSchema_action">"Yes, reset"</string>
    <string name="profile_pin_change">"Change PIN"</string>
    <string name="profile_pin_create">"Create PIN"</string>
    <string name="profile_pin">"PIN"</string>
    <string name="profile_pin_deleteMessage">"Your four-digit PIN will be deleted."</string>
    <string name="profile_pin_delete">"Delete PIN"</string>
    <string name="profile_cards_eraseAll">"Delete all cards"</string>
    <string name="profile_schema_resetCache">"Reset Cache"</string>
    <string name="profile_schema_resetCache_reset">"Are you sure want to reset all the cache data?"</string>
    <string name="profile_resetFrequency">"Reset frequency"</string>
    <string name="profile_reset_footer0Formant">"You currently have %s cards in your Wallet."</string>
    <string name="profile_reset_footer1Formant">"This app saves selected data in the background, to improve performance.\n\nCache size: %s"</string>
    <string name="profile_reset_footer2Formant">"Automatically reset the app cache periodically, to optimize device storage. The data in your Wallet is retained.\n\nLast automatic cache reset: %s"</string>
    <string name="profile_reset_footer_bytes">"bytes"</string>
    <string name="reg_details">"Registration Details"</string>
    <string name="reg_confirmation">"Please select a maximum of three options from the list."</string>
    <string name="result_invalidCredential">"Invalid card or pass"</string>
    <string name="result_validCredential">"Valid card or pass"</string>
    <string name="result_credentialInformation">"Card or pass information"</string>
    <string name="result_loading">"Loading..."</string>
    <string name="result_expired">"Expired"</string>
    <string name="result_expiredDate">"EXPIRED"</string>
    <string name="result_expiresDate">"EXPIRES"</string>
    <string name="result_issuedFormat">"ISSUED %s"</string>
    <string name="result_issuedDate">"ISSUED"</string>
    <string name="card_info">"Card Info"</string>
    <string name="record_verification">"Record Verification"</string>
    <string name="status">"Status"</string>
    <string name="signature">"Signature"</string>
    <string name="status_revoked">"Revoked"</string>
    <string name="status_not_revoked">"Not Revoked"</string>
    <string name="unlocked">"Unlocked"</string>
    <string name="locked">"Locked"</string>
    <string name="record_status">"Record Status"</string>
    <string name="scan_add">"Add to Wallet"</string>
    <string name="scan_verification_errorMessage">"Cannot validate the card or pass.\nPlease try again."</string>
    <string name="settings_environment_title">"Region"</string>
    <string name="settings_kiosk_title">"Kiosk"</string>
    <string name="settings_kiosk_description">"Restrict this device to run only Digital Health Pass Verify"</string>
    <string name="settings_verify_app_title">"Digital Health Pass Verify App"</string>
    <string name="settings_sound_vibration">"Sound &amp; Vibration"</string>
    <string name="settings_sound_vibration_description">"Play sound, vibrate when you scan a QR code."</string>
    <string name="verification_credentialExpired">"The card or pass expiration date has passed the validity date."</string>
    <string name="verification_invalidSignature_notFound">"The card or pass properties are not detected."</string>
    <string name="verification_invalidSignature_keysNotFound">"The card or pass issuer\'s keys are not detected."</string>
    <string name="verification_invalidSignature_invalidSignatureData">"The card or pass signature data is invalid."</string>
    <string name="verification_invalidSignature_unsupportedKeys">"The card or pass issuer\'s keys are not supported for verification."</string>
    <string name="verification_successful">"Verification successful"</string>
    <string name="wallet_discard_title">"Discard contact"</string>
    <string name="app_name">"Wallet"</string>
    <string name="app_long_name">"Open Digital Health Pass Wallet"</string>
    <string name="title_terms_and_conditions">"Terms and Conditions"</string>
    <string name="title_third_party_notices">"Third Party Notices"</string>
    <string name="privacy_policy">"Privacy Policy"</string>
    <string name="profile_reset_title">"Reset"</string>
    <string name="profile_build_title">"Version"</string>
    <string name="contact_call">"Call"</string>
    <string name="cd_subheader_downloaded_hp">"DOWNLOADED HEALTH CARDS, PASSES"</string>
    <string name="cd_associated_key">"Associated key"</string>
    <string name="cd_associated_data">"Associated Data"</string>
    <string name="settings_language_title">"Language"</string>
</resources>