<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:scrollbars="none">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/activity_horizontal_margin"
        android:orientation="vertical"
        android:paddingBottom="30dp">

        <include
            android:id="@+id/settings_top_layout"
            layout="@layout/settings_top_layout" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_reset"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="@dimen/activity_vertical_margin"
            android:gravity="start|center_vertical"
            android:text="@string/profile_reset_title"
            android:minHeight="@dimen/minAccessibilityHeight"
            android:textAllCaps="false"
            android:textColor="@color/textLabels"
            android:textSize="@dimen/font_body"
            app:backgroundTint="@color/cardBackground"
            app:icon="@drawable/ic_chevron_right"
            app:iconGravity="end"
            app:iconTint="@color/subTextLabels" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_kiosk"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="@dimen/activity_vertical_margin"
            android:gravity="start|center_vertical"
            android:text="@string/settings_kiosk_title"
            android:textAllCaps="false"
            android:textColor="@color/textLabels"
            android:textSize="@dimen/font_body"
            android:visibility="gone"
            app:backgroundTint="@color/cardBackground"
            android:minHeight="@dimen/minAccessibilityHeight"
            app:icon="@drawable/ic_chevron_right"
            app:iconGravity="end"
            app:iconTint="@color/subTextLabels"
            tools:visibility="visible" />

        <TextView
            android:id="@+id/text_view_kiosk"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/text_margin"
            android:layout_marginBottom="@dimen/margin_8"
            android:text="@string/settings_kiosk_description"
            android:visibility="gone"
            app:layout_constraintStart_toStartOf="parent"
            tools:visibility="visible" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_sound"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="@dimen/activity_vertical_margin"
            android:gravity="start|center_vertical"
            android:minHeight="@dimen/minAccessibilityHeight"
            android:text="@string/settings_sound_vibration"
            android:textAllCaps="false"
            android:textColor="@color/textLabels"
            android:textSize="@dimen/font_body"
            android:visibility="gone"
            app:backgroundTint="@color/cardBackground"
            app:icon="@drawable/ic_chevron_right"
            app:iconGravity="end"
            app:iconTint="@color/subTextLabels"
            tools:visibility="visible" />

        <TextView
            android:id="@+id/text_view_sound"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/text_margin"
            android:layout_marginBottom="@dimen/margin_8"
            android:text="@string/settings_sound_vibration_description"
            android:visibility="gone"
            app:layout_constraintStart_toStartOf="parent"
            tools:visibility="visible" />

        <androidx.cardview.widget.CardView
            android:id="@+id/profile_terms_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="@dimen/activity_vertical_margin"
            app:cardBackgroundColor="@color/cardBackground"
            app:cardCornerRadius="10dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/button_profile_privacy"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@android:color/transparent"
                    android:drawableEnd="@drawable/ic_chevron_right"
                    android:gravity="start|center_vertical"
                    android:text="@string/privacy_policy"
                    android:textAlignment="textStart"
                    android:textAllCaps="false"
                    android:minHeight="@dimen/minAccessibilityHeight"
                    android:textColor="@color/colorPrimary"
                    android:textSize="@dimen/font_body" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/button_profile_terms"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@android:color/transparent"
                    android:drawableEnd="@drawable/ic_chevron_right"
                    android:gravity="start|center_vertical"
                    android:text="@string/title_terms_and_conditions"
                    android:textAlignment="textStart"
                    android:minHeight="@dimen/minAccessibilityHeight"
                    android:textAllCaps="false"
                    android:textColor="@color/colorPrimary"
                    android:textSize="@dimen/font_body" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/button_third_party"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@android:color/transparent"
                    android:drawableEnd="@drawable/ic_chevron_right"
                    android:gravity="start|center_vertical"
                    android:text="@string/title_third_party_notices"
                    android:textAlignment="textStart"
                    android:minHeight="@dimen/minAccessibilityHeight"
                    android:textAllCaps="false"
                    android:textColor="@color/colorPrimary"
                    android:textSize="@dimen/font_body" />

            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="@dimen/activity_vertical_margin"
            app:cardBackgroundColor="@color/cardBackground"
            app:cardCornerRadius="10dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <com.merative.healthpass.ui.common.custom.LabelValueItem
                    android:id="@+id/textView_profile_env"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/activity_horizontal_margin"
                    app:lvi_left="@string/settings_environment_title"
                    app:lvi_show_divider="false" />

                <com.merative.healthpass.ui.common.custom.LabelValueItem
                    android:id="@+id/textView_profile_build_version"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/activity_horizontal_margin"
                    app:lvi_left="@string/profile_build_title"
                    app:lvi_show_divider="false" />

                <com.merative.healthpass.ui.common.custom.LabelValueItem
                    android:id="@+id/textView_profile_language"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/activity_horizontal_margin"
                    app:lvi_left="@string/settings_language_title"
                    app:lvi_show_divider="false" />

            </LinearLayout>

        </androidx.cardview.widget.CardView>

    </LinearLayout>

</androidx.core.widget.NestedScrollView>